docker/deployment/common/reduced-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reduced-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
  labels:
    app: reduced
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - reduced.to
      secretName: letsencrypt-prod # Name of the secret containing the certificate
  rules:
    - host: reduced.to
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 5000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3000
